# appiman

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ROADMAP.md  readme.md
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: move-appimages.path  move-appimages.service  move-appimages.sh  move-appimages.timer  register-appimages.path  register-appimages.service  register-appimages.sh
docs/: phase1-v0.3.0.md  shell-script-analysis.md
docs/adr/: 0000-template.md  001-migrate-shell-scripts-to-rust.md
docs/architecture/: v0.3.0.md
docs/migration/: v0.2.0-to-v0.3.0.md
src/: clean.rs  config.rs  ingest.rs  log.rs  logger.rs  main.rs  privileges.rs  scan.rs  security.rs  setup.rs  status.rs  sync.rs  systemd.rs  update.rs
src/core/: appimage.rs  cache.rs  metadata.rs  mod.rs  normalization.rs  version_manager.rs
src/mover/: conflict.rs  file_ops.rs  mod.rs  mover.rs  scanner.rs
src/registrar/: desktop_entry.rs  icon_extractor.rs  mod.rs  processor.rs  symlink.rs
tests/: move_appimages_sh.rs  register_appimages_sh.rs
