[package]
name = "appiman"
version = "0.3.0"
edition = "2024"

[dependencies]
which = "5"
tempfile = "3"
dirs = "5"
regex = "1"
nix = { version = "0.27", features = ["user"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
